Add aria-labels to hike links

--- a/ballycroy.html
+++ b/ballycroy.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 8.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/bellmulet-and-ballina-road-circular" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.6/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/lough-aroher-loop" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 8.1/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/the-bangor-trail" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-mayo/the-bangor-trail" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
