--- a/burren.html
+++ b/burren.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 9.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/lough-avalla-farm-loop--2" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/mullaghmore-and-burren-park-circular" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.4/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-clare/fanore-and-blackhead-loop" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-clare/fanore-and-blackhead-loop" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
