--- a/glenveah.html
+++ b/glenveah.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 10/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/glenveagh-castle" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 9.0/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/lough-veagh-trail-to-glenveagh-castle" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/letterkenny-and-ailt-an-chorrain-circular" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-donegal/letterkenny-and-ailt-an-chorrain-circular" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
