--- a/killarney.html
+++ b/killarney.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 9/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/ross-castle-circular" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 9.2/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/gap-of-dunloe-strickeen" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.6/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/dunloe-to-lord-brandon-s-cottage" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-kerry/dunloe-to-lord-brandon-s-cottage" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
