--- a/connemara.html
+++ b/connemara.html
@@ -50,7 +50,7 @@
                     <li><strong>Rating:</strong> 8.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/lower-diamond-hill-loop" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
             </div>
             <div class="hike-rec">
@@ -64,7 +64,7 @@
                     <li><strong>Rating:</strong> 8.8/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/derryinver-tully-hill" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
             <div class="hike-rec">
@@ -78,7 +78,7 @@
                     <li><strong>Rating:</strong> 9.2/10</li>
                 </ul>
                 <div class="hike-link-div">
-                    <a href="https://www.alltrails.com/trail/ireland/county-galway/letterfrack-and-diamond-hill-loop" target="_blank" class="hike-link">Hike Details</a>
+                    <a href="https://www.alltrails.com/trail/ireland/county-galway/letterfrack-and-diamond-hill-loop" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                 </div>
             </div>
         </div>
