--- a/wicklow.html
+++ b/wicklow.html
@@ -49,7 +49,7 @@
                         <li><strong>Rating:</strong> 9.2/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" target="_blank" class="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/miners-road-walk" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                         </div>
                 </div>
                 <div class="hike-rec">
@@ -63,7 +63,7 @@
                         <li><strong>Rating:</strong> 9.2/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" target="_blank" class="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/the-spink-loop" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
                 </div>
                 <div class="hike-rec">
@@ -77,7 +77,7 @@
                         <li><strong>Rating:</strong> 9.0/10</li>
                     </ul>
                     <div class="hike-link-div">
-                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/1798-memorial-to-lugnaquilla" target="_blank" class="hike-link">Hike Details</a>
+                        <a href="https://www.alltrails.com/trail/ireland/county-wicklow/1798-memorial-to-lugnaquilla" aria-label="Go to the detailed hike page (opens in new tab)" target="_blank" class="hike-link">Hike Details</a>
                     </div>
                 </div>
             </div>
