--- a/index.html
+++ b/index.html
@@ -6,55 +6,169 @@
         <meta name="description" content="Webpage to learn about Ireland's national parks for tourists and hikers">
         <meta name="keywords" content="hiking, tourism, nature, national parks, ireland">
     
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Ireland's National Parks</title>
     </head>
 
     <body>
         <header>
-            <h1>Ireland's National Parks</h1>
+            <h1 class="text-center my-auto">Ireland's National Parks</h1>
         </header>
-  
-        
-        <nav>
-            <a href="index.html" class="nav-a">Home</a>
-            <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
-            <a href="connemara.html" class="nav-a">Connemara National Park</a>
-            <a href="burren.html" class="nav-a">Burren National Park</a>
-            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
-            <a href="signup.html" class="nav-a">Sign up!</a>
-        </nav>
 
-        <div id="why-visit">
-            <h2 class="heading">Why Visit?</h2>
-            <p id="why-visit-p">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything.</p>
-            <details>
-                <summary>...</summary>
-                Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.
-            </details>
-            <div id="home-div-photos">
-                <img src="assets/images/home-images/why-visit.jpg" alt="Beautiful landscape" class="why-visit-photos">
-                <img src="assets/images/home-images/why-visit-1.jpg" alt="Coastal landscape" class="why-visit-photos">
-                <img src="assets/images/home-images/why-visit-2.jpg" alt="Plains landscape" class="why-visit-photos">
-                <img src="assets/images/home-images/why-visit-3.jpg" alt="Mountain landscape" class="why-visit-photos">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="killarney.html">Killarney National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="glenveah.html">Glenveah National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="connemara.html">Connemara National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="burren.html">Burren National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="wicklow.html">Wicklow National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="ballycroy.html">Ballycroy National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+        <div class="text-center">
+            <h2 class="text-success mt-3 heading">Why Visit?</h2>
+            <p class="mx-3 mx-sm-5">Ireland is well known for its beautiful landscapes and vivid colors. If you want to use your time well and see some of it's most stunning treasures, explore our website so you don't miss out on anything. Wether you are hiking for fun, health or just to spend a good time with your friends or family, the Ireland landscapes are a must-see for anyone visiting or living in this country. Now check out our webpage and go enjoy your time among nature. And remember, respect the mountains, and keep safe.</p>
+            <div class="row mx-5 d-none d-sm-flex">
+                <img src="assets/images/home-images/why-visit.jpg" alt="Beautiful landscape" class="w-25">
+                <img src="assets/images/home-images/why-visit-1.jpg" alt="Coastal landscape" class="w-25">
+                <img src="assets/images/home-images/why-visit-2.jpg" alt="Plains landscape" class="w-25">
+                <img src="assets/images/home-images/why-visit-3.jpg" alt="Mountain landscape" class="w-25">
+            </div>
+            <div class="d-md-none col-12 mx-auto">
+            <div class="row mx-5 col-10 text-center">
+                <img src="assets/images/home-images/why-visit.jpg" alt="Beautiful landscape" class="w-50">
+                <img src="assets/images/home-images/why-visit-1.jpg" alt="Coastal landscape" class="w-50">
+                </div>
+                <div class="row mx-5 col-10 text-center">
+                <img src="assets/images/home-images/why-visit-2.jpg" alt="Plains landscape" class="w-50">
+                <img src="assets/images/home-images/why-visit-3.jpg" alt="Mountain landscape" class="w-50">
             </div>
         </div>
-
-        <br>
-
-        <div id="where">
-            <h2 class="heading">Where are they?</h2>
-            <img src="assets/images/home-images/national-parks-map.jpg" alt="Map of Ireland's national parks" id="national-parks-map">
         </div>
 
         <br>
 
-        <div id="table-div">
-        <h2 class="heading">Best time to travel</h2>
-            <table>
+        <div class="text-center mt-3">
+            <h2 class="heading text-success">Where are they?</h2>
+            <img src="assets/images/home-images/national-parks-map.jpg" alt="Map of Ireland's national parks" class="w-25">
+        </div>
+
+        <br>
+
+        <div class="text-center mx-5">
+        <h2 class="text-success heading">Best time to travel</h2>
+
+        <!-- Small Screen Table -->
+            <table class="table table-warning table-striped table-bordered border-dark d-sm-none">
+                <tr>
+                    <th></th>
+                    <th>Jan.</th>
+                    <th>Feb.</th>
+                    <th>March</th>
+                    <th>Apr.</th>
+                    <th>May</th>
+                    <th>June</th>
+                </tr>
+                <tr>
+                    <th>Sunrise Time</th>
+                    <td><p>8:45 / 8:17</p></td>
+                    <td><p>8:15 / 7:21</p></td>
+                    <td><p>7:19 / 7:08</p></td>
+                    <td><p>7:06 / 6:01</p></td>
+                    <td><p>5:59 / 5:13</p></td>
+                    <td><p>5:12 / 5:09</p></td>
+                </tr>
+                <tr>
+                    <td><strong>Sunset Time</strong></td>
+                    <td><p>16:25 / 17:14</p></td>
+                    <td><p>17:16 / 18:08</p></td>
+                    <td><p>18:10 / 20:04</p></td>
+                    <td><p>20:06 / 20:58</p></td>
+                    <td><p>21:00 / 21:46</p></td>
+                    <td><p>21:47 / 22:01</p></td>
+                </tr>
+                <tr>
+                    <td><strong>Average Temp.</strong></td>
+                    <td>5°C</td>
+                    <td>5°C</td>
+                    <td>6°C</td>
+                    <td>8°C</td>
+                    <td>11°C</td>
+                    <td>13°C</td>
+                </tr>
+                <tr>
+                    <td><strong>Average Days of Rain</strong></td>
+                    <td>12</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>10</td>
+                    <td>10</td>
+                    <td>11</td>
+                </tr>
+            </table>
+
+            <table class="table table-warning table-striped table-bordered border-dark d-sm-none">
+            <tr>
+                <th></th>
+                <th>July</th>
+                <th>Aug.</th>
+                <th>Sep.</th>
+                <th>Oct.</th>
+                <th>Nov.</th>
+                <th>Dec.</th>
+            </tr>
+            <tr>
+                <td><strong>Sunrise Time</strong></td>
+                <td><p>5:10 / 5:48</p></td>
+                <td><p>5:49 / 6:40</p></td>
+                <td><p>6:41 / 7:31</p></td>
+                <td><p>7:33 / 8:16</p></td>
+                <td><p>7:29 / 8:20</p></td>
+                <td><p>8:22 / 8:45</p></td>
+            </tr>
+            <tr>
+                <td><strong>Sunset Time</strong></td>
+                <td><p>22:00 / 21:27</p></td>
+                <td><p>21:26 / 20:23</p></td>
+                <td><p>20:20 / 19:11</p></td>
+                <td><p>19:09 / 17:02</p></td>
+                <td><p>17:00 / 16:20</p></td>
+                <td><p>16:19 / 16:24</p></td>
+            </tr>
+            <tr>
+                <td><strong>Average Temp.</strong></td>
+                <td>15°C</td>
+                <td>14°C</td>
+                <td>13°C</td>
+                <td>10°C</td>
+                <td>7°C</td>
+                <td>6°C</td>
+            </tr>
+            <tr>
+                <td><strong>Average Days of Rain</strong></td>
+                <td>10</td>
+                <td>11</td>
+                <td>10</td>
+                <td>11</td>
+                <td>11</td>
+                <td>12</td>
+            </tr>
+
+
+            <!-- Bigger Screen Table -->
+            <table class="table table-warning table-striped table-bordered border-dark d-none d-sm-block">
                 <tr>
                     <th></th>
                     <th>Jan.</th>
@@ -72,33 +186,33 @@
                 </tr>
                 <tr>
                     <td><strong>Sunrise Time</strong></td>
-                    <td><p>8:45</p><p>8:17</p></td>
-                    <td><p>8:15</p><p>7:21</p></td>
-                    <td><p>7:19</p><p>7:08</p></td>
-                    <td><p>7:06</p><p>6:01</p></td>
-                    <td><p>5:59</p><p>5:13</p></td>
-                    <td><p>5:12</p><p>5:09</p></td>
-                    <td><p>5:10</p><p>5:48</p></td>
-                    <td><p>5:49</p><p>6:40</p></td>
-                    <td><p>6:41</p><p>7:31</p></td>
-                    <td><p>7:33</p><p>8:16</p></td>
-                    <td><p>7:29</p><p>8:20</p></td>
-                    <td><p>8:22</p><p>8:45</p></td>
+                    <td><p>8:45 / 8:17</p></td>
+                    <td><p>8:15 / 7:21</p></td>
+                    <td><p>7:19 / 7:08</p></td>
+                    <td><p>7:06 / 6:01</p></td>
+                    <td><p>5:59 / 5:13</p></td>
+                    <td><p>5:12 / 5:09</p></td>
+                    <td><p>5:10 / 5:48</p></td>
+                    <td><p>5:49 / 6:40</p></td>
+                    <td><p>6:41 / 7:31</p></td>
+                    <td><p>7:33 / 8:16</p></td>
+                    <td><p>7:29 / 8:20</p></td>
+                    <td><p>8:22 / 8:45</p></td>
                 </tr>
                 <tr>
                     <td><strong>Sunset Time</strong></td>
-                    <td><p>16:25</p><p>17:14</p></td>
-                    <td><p>17:16</p><p>18:08</p></td>
-                    <td><p>18:10</p><p>20:04</p></td>
-                    <td><p>20:06</p><p>20:58</p></td>
-                    <td><p>21:00</p><p>21:46</p></td>
-                    <td><p>21:47</p><p>22:01</p></td>
-                    <td><p>22:00</p><p>21:27</p></td>
-                    <td><p>21:26</p><p>20:23</p></td>
-                    <td><p>20:20</p><p>19:11</p></td>
-                    <td><p>19:09</p><p>17:02</p></td>
-                    <td><p>17:00</p><p>16:20</p></td>
-                    <td><p>16:19</p><p>16:24</p></td>
+                    <td><p>16:25 / 17:14</p></td>
+                    <td><p>17:16 / 18:08</p></td>
+                    <td><p>18:10 / 20:04</p></td>
+                    <td><p>20:06 / 20:58</p></td>
+                    <td><p>21:00 / 21:46</p></td>
+                    <td><p>21:47 / 22:01</p></td>
+                    <td><p>22:00 / 21:27</p></td>
+                    <td><p>21:26 / 20:23</p></td>
+                    <td><p>20:20 / 19:11</p></td>
+                    <td><p>19:09 / 17:02</p></td>
+                    <td><p>17:00 / 16:20</p></td>
+                    <td><p>16:19 / 16:24</p></td>
                 </tr>
                 <tr>
                     <td><strong>Average Temp.</strong></td>
@@ -135,17 +249,27 @@
 
         <br>
 
-        <footer>
-            <ul class="footer-list">
-                <li id="footer-list-p">Ireland's National Parks</li>
-                <li><a href="https://www.facebook.com/" aria-label="Go to our facebook page (opens in new tab)" target="_blank"><i class="fa-brands fa-facebook footer-a"></i></a></li>
-                <li><a href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank"><i class="fa-brands fa-instagram footer-a"></i></a></li>
-                <li><a href="https://www.twitter.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank"><i class="fa-brands fa-twitter footer-a"></i></a></li>
-            </ul>
+        <footer class="container-fluid mt-auto py-3 text-center stick-bottom">
+            <div class="row">
+                <div class="col-9">
+                    <p class="text-start h4">Ireland's National Parks</p>
+                </div>
+                <div class="col-3 row">
+                    <div class="col-4">
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Opens Facebook in a new tab" class="col-4"><i class="fa-brands fa-facebook h3 text-dark"></i></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Opens Instagram in a new tab" class="col-4"><i class="fa-brands fa-instagram h3 text-dark"></i></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://twitter.com/" target="_blank" aria-label="Opens Twitter in a new tab" class="col-4"><i class="fa-brands fa-twitter h3 text-dark"></i></a>
+                </div>
+            </div>
         </footer>
 
         <!--Font Awesome Script -->
         <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 
 </html>
