Add new header and footer to all pages

--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 
         <footer class="container-fluid mt-auto py-3 text-center stick-bottom">
             <div class="row">
-                <div class="col-9">
+                <div class="col-8 col-sm-9">
                     <p class="text-start h4">Ireland's National Parks</p>
                 </div>
-                <div class="col-3 row">
+                <div class="col-4 col-sm-3 row">
                     <div class="col-4">
                     <a href="https://www.facebook.com/" target="_blank" aria-label="Opens Facebook in a new tab" class="col-4"><i class="fa-brands fa-facebook h3 text-dark"></i></a>
                 </div>
