--- a/wicklow.html
+++ b/wicklow.html
@@ -6,26 +6,36 @@
         <meta name="description" content="Webpage to learn about Ireland's national parks for tourists and hikers">
         <meta name="keywords" content="hiking, tourism, nature, national parks, ireland">
     
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Ireland's National Parks</title>
     </head>
 
     <body>
         <header>
-            <h1>Ireland's National Parks</h1>
+            <h1 class="text-center my-auto">Ireland's National Parks</h1>
         </header>
 
-        <nav>
-            <a href="index.html" class="nav-a">Home</a>
-            <a href="killarney.html" class="nav-a">Killarney National Park</a>
-            <a href="glenveah.html" class="nav-a">Glenveah National Park</a>
-            <a href="connemara.html" class="nav-a">Connemara National Park</a>
-            <a href="burren.html" class="nav-a">Burren National Park</a>
-            <a href="wicklow.html" class="nav-a">Wicklow Mountains National Park</a>
-            <a href="ballycroy.html" class="nav-a">Ballycroy National Park</a>
-            <a href="signup.html" class="nav-a">Sign up!</a>
-        </nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="killarney.html">Killarney National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="glenveah.html">Glenveah National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="connemara.html">Connemara National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="burren.html">Burren National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="wicklow.html">Wicklow National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="ballycroy.html">Ballycroy National Park</a></li>
+              <li class="nav-item d-flex justify-content-start"><a class="nav-link" href="signup.html">Sign Up</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
         <div id="name">
             <h2 class="heading">Wicklow Mountains National Park</h2>
@@ -176,17 +186,27 @@
             </div>
         </div>
 
-        <footer>
-            <ul class="footer-list">
-                <li id="footer-list-p">Ireland's National Parks</li>
-                <li><a href="https://www.facebook.com/" aria-label="Go to our facebook page (opens in new tab)" target="_blank"><i class="fa-brands fa-facebook footer-a"></i></a></li>
-                <li><a href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank"><i class="fa-brands fa-instagram footer-a"></i></a></li>
-                <li><a href="https://www.twitter.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank"><i class="fa-brands fa-twitter footer-a"></i></a></li>
-            </ul>
+        <footer class="container-fluid mt-auto py-3 text-center stick-bottom">
+            <div class="row">
+                <div class="col-8 col-sm-9">
+                    <p class="text-start h4">Ireland's National Parks</p>
+                </div>
+                <div class="col-4 col-sm-3 row">
+                    <div class="col-4">
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Opens Facebook in a new tab" class="col-4"><i class="fa-brands fa-facebook h3 text-dark"></i></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://www.instagram.com/" target="_blank" aria-label="Opens Instagram in a new tab" class="col-4"><i class="fa-brands fa-instagram h3 text-dark"></i></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://twitter.com/" target="_blank" aria-label="Opens Twitter in a new tab" class="col-4"><i class="fa-brands fa-twitter h3 text-dark"></i></a>
+                </div>
+            </div>
         </footer>
 
         <!--Font Awesome Script -->
         <script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 
 </html>
